--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -14,6 +14,6 @@ jobs:
         with:
           php-version: '8.0'
       - name: Install Composer dependencies
-        run: composer install
+        run: composer update
       - name: Lint PHP files
         run: composer lint
