--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -12,8 +12,6 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
-      - name: Install dependencies
-        run: npm install
-      - name: Lint
-        run: npm run lint
+          node-version: '20'
+      - run: npm ci
+      - run: npm run lint
