--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -11,6 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Set up Node.js
         uses: actions/setup-node@v2
+        run: composer update
         with:
           node-version: '14'
       - name: Install dependencies
